Add Tags to TransactionItems